<resources>
    <string name="app_name">OnlineShopping_MobileApp_23643-LucianoGimenez</string>
    <string name="bee">Bee</string>
    <string name="shopping">Shopping</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="add_to_Cart">Add to cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="zip_code">Zip code</string>
    <string name="currency">€</string>
    <string name="order_number">Order number:</string>
    <string name="date">Date:</string>
    <string name="status">Status:</string>
    <string name="order_price">Price:</string>
    <string name="checkout">Proceed to checkout</string>
    <string name="about_this_app">About this App</string>
    <string name="rate">Rate:</string>
    <string name="increase">increase item</string>
    <string name="decrease">decrease item</string>
    <string name="loading">Loading…</string>
    <string name="copyright">&#169; 2022, Luciano Gimenez, All rights reserved</string>
    <string name="credits">Credits:</string>
    <string name="thispersondoesnotexist">https://thispersondoesnotexist.com/</string>
    <string name="fakestoreapi">https://fakestoreapi.com/</string>
    <string name = "stackoverflow">https://stackoverflow.com/questions/72105615/error-java-net-sockettimeoutexception-timeout-in-kotlin</string>
</resources>