<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        android:textColor="@color/background_light2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button"
        android:text="@string/register"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="338dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.237">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_r" />

            <EditText
                android:id="@+id/user_name_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="username"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_r" />

            <EditText
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/number"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/street" />

            <EditText
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/street"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <EditText
                android:id="@+id/postal_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="postalCode"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/zip_code"
                android:inputType="textPostalAddress"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_num" />

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="phone"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/password_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="password"
                android:backgroundTint="@color/background_light2"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/background_light2"
                android:textColorHint="@color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>