<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textColor="@color/background_light2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cart"
        android:layout_width="300dp"
        android:layout_height="319dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/shop_button_cart"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/button"
        android:text="@string/shop"
        android:textColor="@color/background"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_cart"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/cart_button_cart"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/cart"
        android:layout_marginStart="2dp"
        android:textColor="@color/background"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_button_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/shop_button_cart"
        app:layout_constraintTop_toTopOf="@+id/shop_button_cart"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/orders_button_cart"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:layout_marginStart="2dp"
        android:text="@string/orders"
        android:textColor="@color/background"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_button_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cart_button_cart"
        app:layout_constraintTop_toTopOf="@+id/shop_button_cart"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profile_button_cart"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/button"
        android:layout_marginEnd="2dp"
        android:text="@string/profile"
        android:textColor="@color/background"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/shop_button_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orders_button_cart"
        app:layout_constraintTop_toTopOf="@+id/shop_button_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>